completed offline message pulling&group alt logic
